devops/argocd/manifests/ingress-main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-main
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:064662847354:certificate/abc30744-f258-4b61-8363-c0a15b893e78
    external-dns.alpha.kubernetes.io/hostname: prod.base-mainnet-v-1-0.intuition.sh,prod.base-sepolia.intuition-api.com
spec:
  ingressClassName: alb
  rules:
    - host: prod.base-mainnet-v-1-0.intuition.sh
      http:
        paths:
          - path: /v1/graphql
            pathType: Prefix
            backend:
              service:
                name: prod-base-mainnet-v-1-5-vector-graphql-engine
                port:
                  number: 8080
    - host: prod.base-sepolia.intuition-api.com
      http:
        paths:
          - path: /v1/graphql
            pathType: Prefix
            backend:
              service:
                name: prod-base-sepolia-v-1-5-vector-graphql-engine
                port:
                  number: 8080
